# SaLMon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
addons/salmon/: model_download.bat  model_download.sh
src/: entry.cpp  register_types.cpp  register_types.h
src/llm_node/: llmnode.cpp  llmnode.h
tests/: test_model.cpp
